--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.Phytogram"
         tools:targetApi="31">
         <activity
-            android:name=".HomeActivity"
+            android:name=".fragments.HomeActivity"
             android:exported="false" />
         <activity
             android:name=".fragments.RegistrationActivity"
