так оно не крашится, меню навигейшн бар вызывает проблему(его просто закомитил пока),проблему еще не решил

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Phytogram"
         tools:targetApi="31">
         <activity
-            android:name=".fragments.HomeActivity"
+            android:name=".ui.HomeActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
