--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ android {
 
 dependencies {
 
+    implementation "com.squareup.retrofit2:retrofit2:2.9.8"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
@@ -50,27 +53,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
     implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
-
-
-    // Navigation Component
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.6'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.6'
-
-    // Room components
-    implementation "androidx.room:room-runtime:2.6.1"
-    kapt "androidx.room:room-compiler:2.6.1"
-    implementation "androidx.room:room-ktx:2.6.1"
-    androidTestImplementation "androidx.room:room-testing:2.6.1"
-
-    // Lifecycle components
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.7.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
-
-    // Kotlin components
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
 
 
 
